@@ -27,6 +27,9 @@
 === Execute ===
 	* #1477: Fix ignore Added events from state file on startup
 
+==== ConsoleUI ====
+	* #1258: Add support for urls and magnet uris in add command
+
 === Deluge 1.3.2 (24 May 2011) ===
 ==== Core ====
 	* #1527: Fix Converting unicode to unicode error in move_storage
